# clean_cargo_projects

./: Cargo.toml  README.md
src/: cli.rs  main.rs
