[package]
name = "clean_cargo_projects"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"           # 并行迭代库
dialoguer = "0.11"
anyhow = "1.0"
lazy_static = "1.5"      # 静态变量初始化
num_cpus = "1.7"        # 获取 CPU 核心数
clap = { version = "4.4", features = ["derive"] }  # 命令行解析
glob = "0.3"                                         # glob 匹配
serde = { version = "1.0", features = ["derive"] }  # JSON 序列化
serde_json = "1.0"                                   # JSON 输出
